# company_research

./: README.md  pyproject.toml  report.md
data/: company_info.json  market_analysis.json  report_format.md  sentiment.json
knowledge/: user_preference.txt
reports/: google_report.md  groww_feedback.md  groww_report.md  microsoft_feedback.md  microsoft_report.md  tsmc_report.md
src/company_research/: crew.py  main.py  tempCodeRunnerFile.py
src/company_research/config/: agents.yaml  tasks.yaml
src/company_research/tools/: __init__.py  custom_tool.py
stock_reports/: GOOG_1M_20251119_121742.md  MSFT_1M_20251118_230748.md  TSLA_1M_20251118_232558.md
