[project]
name = "company_research"
version = "0.1.0"
description = "Company Research agent using CrewAI"
authors = [{ name = "Srivarshith Rao", email = "srivarshith@iiit.ac.in" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    # --- Core CrewAI ---
    "crewai[tools]>=0.165.1,<1.0.0",

    # --- Wikipedia tools ---
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",

    # --- Optional helpers / APIs ---
    "yfinance>=0.2.40",           # For Yahoo Finance fallback
    "requests>=2.32.0",           # Needed for Wikipedia + APIs
    "beautifulsoup4>=4.13.0"      # For parsing (used by wikipedia)
]

[project.scripts]
company_research = "company_research.main:run"
run_crew = "company_research.main:run"
train = "company_research.main:train"
replay = "company_research.main:replay"
test = "company_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
