[project]
name = "company_research"
version = "0.1.0"
description = "company_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "wikipedia>=1.4.0,<2.0.0",
    "wikipedia-api>=0.6.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.20.0,<6.0.0"
]

[project.scripts]
company_research = "company_research.main:run"
run_crew = "company_research.main:run"
train = "company_research.main:train"
replay = "company_research.main:replay"
test = "company_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
